<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewVersion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
<string name="version">1.0</string>
<string name="more_tel_num_txt">400-083-8310</string>
<string name="person_more_tel_num">4000838310</string>

 <!-- 底部菜单栏 -->
    <string name="main_menu_personcenter">个人中心</string>
    <string name="main_menu_home">首页</string>
    <string name="main_menu_search">活动</string>
    <string name="main_menu_list">列表</string>
    <string name="main_menu_shopcart">购物车</string>
<item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
      <item type="id" name="tag_three"></item>
    <item type="id" name="tag_four"></item>
</resources>
