<?xml version="1.0" encoding="UTF-8"?>
<TabHost 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/main_bg"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/menu_bg"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <!-- 首页 -->

                <RadioButton
                    android:id="@+id/main_tab_home"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:paddingTop="7dp"
                    android:drawableTop="@drawable/main_menu_home"
                    android:text="@string/main_menu_home"
                    android:textColor="@color/color_radiobutton" />
                <!-- 搜索 -->

                <RadioButton
                    android:id="@+id/main_tab_search"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                                        android:paddingTop="7dp"
                    android:drawableTop="@drawable/main_menu_search"
                    android:text="@string/main_menu_search"
                    android:textColor="@color/color_radiobutton" />
                <!-- 列表 -->

                <RadioButton
                    android:id="@+id/main_tab_list"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                                        android:paddingTop="7dp"
                    android:drawableTop="@drawable/main_menu_list"
                    android:text="@string/main_menu_list"
                    android:textColor="@color/color_radiobutton" />
                <!-- 购物车 -->

                <RadioButton
                    android:id="@+id/main_tab_shopcart"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                                        android:paddingTop="7dp"
                    android:drawableTop="@drawable/main_menu_shopcart"
                    android:text="@string/main_menu_shopcart"
                    android:textColor="@color/color_radiobutton" />
                <!-- 个人中心 -->

                <RadioButton
                    android:id="@+id/main_tab_personcenter"
                    style="@style/MMTabButton"
                                        android:paddingTop="7dp"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_menu_personcenter"
                    android:text="@string/main_menu_personcenter"
                    android:textColor="@color/color_radiobutton" />
            </RadioGroup>
        </FrameLayout>
    </LinearLayout>

</TabHost>
